@@ -5,6 +5,7 @@ applauncherd (3.0.1) unstable; urgency=low
   * Changes: performance tests are run 5 times; 3 consistent values are considered
   * Changes: performance test optimization part1
   * Fixes: NB#291089 - Installation of clock application fails when applauncherd daemon stopped
+  * Changes: Correct file path and dir path for applications started by booster-m
 
  -- Alexey Shilov <alexey.shilov@nokia.com>  Mon, 14 Nov 2011 13:39:38 +0200
 
